# oa_sys

./: .env.shared.example  .gitignore  README.md  pyproject.toml
scripts/: init_mysql.sql  seed_dev_admin.py
services/: __init__.py
services/oa_admin/: .env.example  __init__.py  main.py
services/oa_admin/apps/: __init__.py  router_init.py
services/oa_admin/apps/auth/: constants.py
services/oa_admin/apps/auth/api/: __init__.py  router.py
services/oa_admin/apps/auth/managements/: __init__.py  auth_management.py
services/oa_admin/apps/auth/models/: __init__.py  auth.py
services/oa_admin/apps/health/: __init__.py
services/oa_admin/apps/health/api/: __init__.py  router.py
services/oa_admin/apps/operation_log/: __init__.py
services/oa_admin/apps/operation_log/api/: __init__.py  router.py
services/oa_admin/apps/operation_log/crud/: __init__.py  operation_log_crud.py
services/oa_admin/apps/operation_log/managements/: __init__.py  operation_log_management.py
services/oa_admin/core/: __init__.py  config.py
services/oa_admin/db/: __init__.py  mysql.py  redis.py
services/oa_admin/worker/: __init__.py  celery_app.py
services/oa_admin/worker/tasks/: feishu_tasks.py
setup_tools/src/common/: __init__.py  exception_handlers.py  exceptions.py  http.py  logger.py  middleware.py  mysql.py  redis.py  response.py  security.py
tests/: test_auth.py  test_external_feishu.py  test_feishu.py  test_hourly_feishu_task.py  test_infra_clients.py  test_operation_log.py  test_permission.py  test_role.py  test_schedule_trigger.py  test_user.py
(+22 files in other folders)
